--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.4",
+    "redux": "^3.5.2"
   }
 }
